Fixed another layout issue with emoji

--- a/src/screens/task/styles.scss
+++ b/src/screens/task/styles.scss
@@ -34,6 +34,7 @@ $small-screen-threshold: 768px;
       }
       img {
         grid-area: emoji;
+        justify-self: flex-start;
       }
       button {
         grid-area: button;
